# Pro-Chat

./: .gitignore  Cargo.toml  README.md  app.js  index.html  package-lock.json  package.json  shell.nix  style.css
nvim-plugin/lua/pro-chat/: init.lua
nvim-plugin/plugin/: pro-chat.lua
src/: App.jsx  App.jsx.backup  api.rs  app.rs  config.rs  event.rs  history.rs  keybinds.rs  main.rs  markdown.rs  neovim.rs  tools.rs  ui.rs
